--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
-venue: "Department of Biochemistry, University of Otago"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "710 Cumberland Street"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
+venue: "University of Otago & NeSI"        # brief name of host site without address (e.g., "Euphoric State University")
+address: "Department of Biochemistry, 710 Cumberland Street, Dunedin"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
 country: "nz"	      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "nz"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "-45.864437,170.513253"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
-humandate: "Jun 29-Jul 1, 2016"    # human-readable date (e.g., "Feb 17-18, 2020")
+humandate: "Jun 29 - Jul 1, 2016"    # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: "9:00am - 2:30pm"    # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 20160629      # use YYYY-MM-DD format like 2015-01-01
 enddate: 20160701        # use YYYY-MM-DD format like 2015-01-02
