--- a/index.html
+++ b/index.html
@@ -599,7 +599,10 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 <div id="python"> <!-- Start of 'Python' section. Remove the third paragraph if
            the workshop will teach Python using something other than
            the IPython notebook.
-           Details at http://ipython.org/ipython-doc/2/install/install.html#browser-compatibility -->
+           Details at
+           http://ipython.org/ipython-doc/2/install/install.html#browser-compatibility
+           -->
+<!--
   <h3>Python</h3>
 
   <p>
@@ -675,6 +678,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       </ol>
     </div>
   </div>
+-->
 <!--
   <p>
   Once you are done installing the software listed above,
