--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ enddate: 20160701        # use YYYY-MM-DD format like 2015-01-02
 instructor: ["Mik Black", "Murray Cadzow", "Tom Kelly", "Tanya Flynn"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["Riku Takei", "Anthony Shaw", "Nick Burns"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "mik.black@otago.ac.nz"      # contact email address for workshop organizer, such as "grace@hopper.org"
-etherpad: https://public.etherpad-mozilla.org/p/2016-06-29-otago        # optional (insert the URL for your Etherpad if you're using one)
+etherpad: http://pad.software-carpentry.org/2016-06-29-otago        # optional (insert the URL for your Etherpad if you're using one)
 eventbrite: 26189071217 (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
 
