--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@ instructor: ["Mik Black", "Murray Cadzow", "Tom Kelly", "Tanya Flynn"] # list of
 helper: ["Riku Takei", "Anthony Shaw", "Nick Burns"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "mik.black@otago.ac.nz"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad:  http://pad.software-carpentry.org/2016-06-29-otago # optional (insert the URL for your Etherpad if you're using one)
-
-eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
+eventbrite: 26189071217      # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
 
 
