--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ humandate: "Jun 29 - Jul 1, 2016"    # human-readable date (e.g., "Feb 17-18, 20
 humantime: "9:00am - 2:30pm"    # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 20160629      # use YYYY-MM-DD format like 2015-01-01
 enddate: 20160701        # use YYYY-MM-DD format like 2015-01-02
-instructor: ["Mik Black", "Murray Cadzow", "Tom Kelly", "Tanya Flynn"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["Riku Takei", "Anthony Shaw", "Nick Burns"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+instructor: ["Mik Black", "Murray Cadzow", "Tom Kelly", "Tanya Flynn", "Dave Eyers", "Nick Burns"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: ["Riku Takei", "Anthony Shaw"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "mik.black@otago.ac.nz"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad:  http://pad.software-carpentry.org/2016-06-29-otago # optional (insert the URL for your Etherpad if you're using one)
 eventbrite: 26189071217      # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
